# django-mail-analytics

./: .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.github/workflows/: codeql-analysis.yml  create-release.yml  pre-commit-autoupdate.yml  test-package.yml
django_mail_analytics/: __init__.py  admin.py  apps.py  mail.py  metadata.py  models.py  urls.py  views.py
django_mail_analytics/migrations/: 0001_initial.py
django_mail_analytics/templates/django_mail_analytics/: mail_list.html
tests/: settings.py  test_mail.py  test_metadata.py  urls.py
